--- a/src/routes/login.sass
+++ b/src/routes/login.sass
@@ -1,8 +1,7 @@
-.btn-google 
+.btn-google
     color: #545454
     background-color: #ffffff
     box-shadow: 0 1px 2px 1px #ddd
-
 
 .grid-container
     display: grid
@@ -10,7 +9,9 @@
     grid-template-rows: 100vh
     grid-gap: 0px
 
-
 .login-content
     justify-self: center
     align-self: center
+
+.log-in
+    color: white
