Add text to contact

--- a/src/routes/contact.sass
+++ b/src/routes/contact.sass
@@ -1,8 +1,15 @@
 .contact-container
     display: flex
     flex-direction: column
-    text-aling: center
+    text-align: center
     justify-content: center
+    margin: auto
+    padding: 10rem
 
 .contact
+    display: flex
+    margin: auto
     color: white
+    font-weight: bold
+    text-shadow: 15px
+    font-size: 3rem
