--- a/src/routes/about.sass
+++ b/src/routes/about.sass
@@ -4,4 +4,8 @@
     text-align: center
     justify-content: center
     margin-top: 6rem
+
+.container-text
     color: white
+    font-weight: bold
+    font-size: 3rem
